[gd_scene load_steps=3 format=3 uid="uid://colgwu8bb7da6"]

[ext_resource type="Script" uid="uid://cuf577qgr0mgg" path="res://Scripts/pause.gd" id="1_k0w1u"]
[ext_resource type="FontFile" uid="uid://duf2yfwdtohl8" path="res://FONTS/retropix.ttf/retropix.ttf" id="2_1och7"]

[node name="Pause" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k0w1u")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.258824, 0.258824, 0.258824, 0.776471)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 8

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1och7")
theme_override_font_sizes/font_size = 50
text = "Paused"

[node name="Resume" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Resume Game"

[node name="Settings" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="GridContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="GridContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="GridContainer/Quit" to="." method="_on_quit_pressed"]
